agregando modificaciones a la maquetacion y estilos mobile firts

--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&amp;family=Lexend+Deca&amp;display=swap" rel="stylesheet">
   </head>
   <body>
-    <main>
+    <main class="centrar">
       <section class="container">
-        <article class="sedans"><span class="icon_sedans"></span>
-          <h1>Sedans</h1>
+        <article class="section_card"><img src="./images/icon-sedans.svg" alt="img_sedans">
+          <h1>SEDANS</h1>
           <p>
             Choose a sedan for its affordability and excellent fuel economy. 
             Ideal for cruising in the city or on your next road trip.
-          </p><a>Learn More</a>
+          </p><a class="boton_sedans" href="#" target="_blank" rel="noreferrer">Learn More</a>
         </article>
-        <article class="suvs"><span class="icon_suvs"></span>
-          <h1>SUVs</h1>
+        <article class="section_card"><img src="./images/icon-suvs.svg" alt="img_suvs">
+          <h1>SUVS</h1>
           <p>
             Take an SUV for its spacious interior, power, and versatility. 
             Perfect for your next family vacation and off-road adventures.
-          </p><a>Learn More</a>
+          </p><a class="boton_suvs" href="#" target="_blank" rel="noreferrer">Learn More</a>
         </article>
-        <article class="luxury"><span class="icon_luxury"></span>
-          <h1>Luxury</h1>
+        <article class="section_card"><img src="./images/icon-luxury.svg" alt="img_luxury">
+          <h1>LUXURY</h1>
           <p>
             Cruise in the best car brands without the bloated prices. 
             Enjoy the enhanced comfort of a luxury rental and arrive in style.
-          </p><a>Learn More</a>
+          </p><a class="boton_luxury" href="#" target="_blank" rel="noreferrer">Learn More</a>
         </article>
       </section>
       <div class="attribution">
