modificaciones finales responsive

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Frontend Mentor | Column Card Componet</title>
+    <link rel="stylesheet" media="(min-width: 1024px)" href="./css/desktop.css">
+    <title>Column Card Componet | Frontend Mentor</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&amp;family=Lexend+Deca&amp;display=swap" rel="stylesheet">
   </head>
   <body>
-    <main class="centrar">
-      <section class="container">
+    <main class="container">
+      <section class="container2">
         <article class="section_card"><img src="./images/icon-sedans.svg" alt="img_sedans">
           <h1>SEDANS</h1>
           <p>
@@ -37,11 +38,11 @@
           </p><a class="boton_luxury" href="#" target="_blank" rel="noreferrer">Learn More</a>
         </article>
       </section>
-      <div class="attribution">
+      <section class="attribution">
         <h3>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noreferrer">Frontend Mentor</a>. 
           Coded by <a href="#">Yeferson Soto.</a>
         </h3>
-      </div>
+      </section>
     </main>
   </body>
 </html>
